Removing jar manifest and setting source compatibility to 1.6