@@ -24,6 +24,7 @@ import io.minio.objectstorage.client.messages.*;
 import org.xmlpull.v1.XmlPullParser;
 import org.xmlpull.v1.XmlPullParserException;
 
+import javax.xml.bind.DatatypeConverter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -61,7 +62,6 @@ public class HttpClient implements Client {
     public ObjectMetadata getObjectMetadata(String bucket, String key) throws IOException {
         GenericUrl url = getGenericUrlOfKey(bucket, key);
         HttpRequest request = getHttpRequest("HEAD", url);
-        HttpHeaders headers = request.getHeaders();
 
         HttpResponse response = request.execute();
         try {
@@ -100,7 +100,7 @@ public class HttpClient implements Client {
     private GenericUrl getGenericUrlOfKey(String bucket, String key) {
         GenericUrl url = new GenericUrl(this.url);
 
-        List<String> pathParts = new LinkedList<>();
+        List<String> pathParts = new LinkedList<String>();
         pathParts.add("");
         pathParts.add(bucket);
         pathParts.add(key);
@@ -112,7 +112,7 @@ public class HttpClient implements Client {
     private GenericUrl getGenericUrlOfBucket(String bucket) {
         GenericUrl url = new GenericUrl(this.url);
 
-        List<String> pathParts = new LinkedList<>();
+        List<String> pathParts = new LinkedList<String>();
         pathParts.add("");
         pathParts.add(bucket);
 
@@ -126,7 +126,6 @@ public class HttpClient implements Client {
 
         HttpRequest request = getHttpRequest("GET", url);
         request = request.setRequestMethod("GET");
-        HttpHeaders httpHeaders = request.getHeaders();
 
         HttpResponse response = request.execute();
         return response.getContent();
@@ -202,7 +201,6 @@ public class HttpClient implements Client {
         GenericUrl url = getGenericUrlOfBucket(bucket);
 
         HttpRequest request = getHttpRequest("HEAD", url);
-        HttpHeaders headers = request.getHeaders();
 
         try {
             HttpResponse response = request.execute();
@@ -252,7 +250,7 @@ public class HttpClient implements Client {
             byte[] dataArray = readData((int) size, data);
             putObject(bucket, key, contentType, dataArray);
         } else {
-            List<String> parts = new LinkedList<>();
+            List<String> parts = new LinkedList<String>();
             for (int part = 1; ; part++) {
                 byte[] dataArray = readData(partSize, data);
                 if (dataArray.length == 0) {
@@ -285,7 +283,6 @@ public class HttpClient implements Client {
         url.set("uploads", "");
 
         HttpRequest request = getHttpRequest("POST", url);
-        HttpHeaders headers = request.getHeaders();
 
         HttpResponse response = request.execute();
         try {
@@ -306,7 +303,7 @@ public class HttpClient implements Client {
         GenericUrl url = getGenericUrlOfKey(bucket, key);
         url.set("uploadId", uploadID);
 
-        List<Part> parts = new LinkedList<>();
+        List<Part> parts = new LinkedList<Part>();
         for (int i = 0; i < etags.size(); i++) {
             Part part = new Part();
             part.setPartNumber(i + 1);
@@ -320,7 +317,6 @@ public class HttpClient implements Client {
         byte[] data = completeManifest.toString().getBytes("UTF-8");
 
         HttpRequest request = getHttpRequest("POST", url, data);
-        HttpHeaders headers = request.getHeaders();
         request.setContent(new ByteArrayContent("application/xml", data));
 
         HttpResponse response = request.execute();
@@ -357,7 +353,7 @@ public class HttpClient implements Client {
         HttpHeaders headers = request.getHeaders();
 
         if (md5sum != null) {
-            String base64md5sum = Base64.getEncoder().encodeToString(md5sum);
+            String base64md5sum = DatatypeConverter.printBase64Binary(md5sum);
             headers.setContentMD5(base64md5sum);
         }
 
